examples/errors/circular-include.spcasm
org 0

include "circularly-included.spcasm.noerror"
